--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -3,22 +3,23 @@
   background-color: #282c34;
 }
 
-.topnav a {
+.topnav button {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #070606;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  margin: 1px 6px;
 }
 
-.topnav a:hover {
+.topnav button:hover {
   background-color: #ddd;
   color: black;
 }
 
-.topnav a.active {
+.topnav button.active {
   background-color: #04aa6d;
   color: white;
 }
@@ -28,12 +29,13 @@
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
+  .topnav button:not(:first-child) {
     display: none;
   }
-  .topnav a.icon {
+  .topnav button.icon {
     float: right;
     display: block;
+    border-color: #04aa6d;
   }
 }
 
@@ -46,7 +48,7 @@
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .topnav.responsive button {
     float: none;
     display: block;
     text-align: left;
