--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -3,23 +3,22 @@
   background-color: #282c34;
 }
 
-.topnav button {
+.topnav a {
   float: left;
   display: block;
-  color: #070606;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  margin: 1px 6px;
 }
 
-.topnav button:hover {
+.topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.topnav button.active {
+.topnav a.active {
   background-color: #04aa6d;
   color: white;
 }
@@ -29,13 +28,12 @@
 }
 
 @media screen and (max-width: 600px) {
-  .topnav button:not(:first-child) {
+  .topnav a:not(:first-child) {
     display: none;
   }
-  .topnav button.icon {
+  .topnav a.icon {
     float: right;
     display: block;
-    border-color: #04aa6d;
   }
 }
 
@@ -48,7 +46,7 @@
     right: 0;
     top: 0;
   }
-  .topnav.responsive button {
+  .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
